<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECECEC"
    android:backgroundTint="#00D31313"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="6dp"
    tools:layout_editor_absoluteY="26dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="36dp"
        android:background="#C35BA10B"
        app:layout_constraintBottom_toTopOf="@+id/textMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="63dp"
            android:layout_marginTop="84dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="11dp"
            android:text="@string/sloganText"
            android:textAllCaps="false"
            android:textColor="#FBF5F5"
            android:textColorLink="#F2E1D6D9"
            android:textIsSelectable="false"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/textView8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="121dp"
            android:layout_height="39dp"
            android:layout_marginEnd="44dp"
            android:layout_marginBottom="55dp"
            android:text="@string/sloganAuthors"
            android:textColor="#FAF9F9"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:layout_marginEnd="45dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_plain_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:text="@string/message"
        android:textSize="14dp"
        app:layout_constraintBottom_toTopOf="@+id/textLogin"
        app:layout_constraintStart_toEndOf="@+id/textLogin"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
        tools:ignore="SpUsage,TextSizeCheck" />

    <TextView
        android:id="@+id/textViewSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="54dp"
        android:text="Senha:"
        app:layout_constraintBottom_toTopOf="@+id/checkSaveLogin"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextPassword2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLogin" />

    <CheckBox
        android:id="@+id/checkSaveLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="41dp"
        android:text="@string/saveLogin"
        android:textColor="#777777"
        app:layout_constraintBottom_toTopOf="@+id/buttonEnter"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword2"
        app:layout_constraintTop_toBottomOf="@+id/textViewSenha" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewSenha"
        app:layout_constraintTop_toBottomOf="@+id/editLogin"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/buttonEnter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="139dp"
        android:onClick="entrarClicado"
        android:text="@string/enter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkSaveLogin" />

    <EditText
        android:id="@+id/editLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/textViewSenha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textLogin"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="34dp"
        android:text="Login:"
        app:layout_constraintBottom_toTopOf="@+id/textViewSenha"
        app:layout_constraintEnd_toStartOf="@+id/editLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textMessage" />


</androidx.constraintlayout.widget.ConstraintLayout>


